<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<!-- <TextView  -->
<!--     android:layout_width="wrap_content"	 -->
<!--     android:layout_height="wrap_content" -->
<!--     android:textAppearance="?android:attr/textAppearanceLarge" -->
<!--     android:text="@string/save_dialog" -->
<!--     android:layout_margin="16dp" -->
<!--     android:id="@+id/textView2" -->
<!--     />     -->
<EditText
    android:layout_width="wrap_content"	
    android:layout_height="wrap_content"
    android:id="@+id/editText1"
    android:hint="@string/save_dialog"
    android:layout_margin="16dp"
    android:layout_centerHorizontal="true"
    />

<Button
    android:id="@+id/cancel_save"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/save"
    android:layout_alignBottom="@+id/save"
    android:layout_alignLeft="@+id/editText1"
    android:layout_marginLeft="52dp"
    android:text="@string/cancel_save" />

<Button
    android:id="@+id/save"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/editText1"
    android:layout_toRightOf="@+id/cancel_save"
    android:text="@string/save" />
	
</RelativeLayout>
